fixed overflows to appear only when needed

--- a/public/css/loggedin_layout.css
+++ b/public/css/loggedin_layout.css
@@ -7,7 +7,7 @@ body {
   grid-gap: 2rem;
   grid-template-areas: "sidebar content";
   grid-template-columns: fit-content(20%) auto;
-  overflow-x: scroll;
+  overflow: auto;
 }
 
 .content{
